--- a/.github/workflow/tauri.yml
+++ b/.github/workflow/tauri.yml
@@ -119,7 +119,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Deploy install.json
+      - name: 部署 install.json 到 Github Pages 中
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
