--- a/.github/workflow/tauri.yml
+++ b/.github/workflow/tauri.yml
@@ -2,9 +2,21 @@ name: "publish"
 
 on:
   push:
-  # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    branches: [ master ]
+    # tags:
+    #   - 'v*'
+    paths-ignore:
+      - '.idea/**'
+      - '.gitattributes'
+      - '.github/**.json'
+      - '.gitignore'
+      - '.gitmodules'
+      - '**.md'
+      - '**/*.txt'
+      - '**/*.png'
+      - '**/*.jpg'
+      - 'LICENSE'
+      - 'NOTICE'
   workflow_dispatch:
 
 jobs:
@@ -16,14 +28,18 @@ jobs:
       release_id: ${{ steps.create-release.outputs.result }}
 
     steps:
+      - name: 签出代码
       - uses: actions/checkout@v3
-      - name: setup node
+
+      - name: 设置 Node 环境
         uses: actions/setup-node@v3
         with:
           node-version: 18
-      - name: get version
+
+      - name: 获取版本号
         run: echo "PACKAGE_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
-      - name: create release
+
+      - name: 创建 Release
         id: create-release
         uses: actions/github-script@v6
         with:
@@ -50,24 +66,32 @@ jobs:
 
     runs-on: ${{ matrix.platform }}
     steps:
-      - name: 安装pnpm
+      - name: 签出代码
+      - uses: actions/checkout@v3
+
+      - name: 安装 pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
-      - uses: actions/checkout@v3
-      - name: setup node
+
+      - name: 设置 Node 环境
         uses: actions/setup-node@v3
         with:
           node-version: 18
-      - name: install Rust stable
+
+      - name: 安装 Rust 工具链
         uses: dtolnay/rust-toolchain@stable
-      - name: install dependencies (ubuntu only)
+
+      - name: 安装依赖 (只有 ubuntu)
         if: matrix.platform == 'ubuntu-20.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-      - name: install frontend dependencies
-        run: pnpm install # change this to npm or pnpm depending on which one you use
+
+      - name: 安装前端依赖
+        run: pnpm install
+
+      - name: 构建 Tauri
       - uses: tauri-apps/tauri-action@v0.3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -105,17 +129,19 @@ jobs:
     needs: [create-release, build-tauri,publish-release]
 
     steps:
-      - name: Setup node
+      - name: 设置 Node 环境
         uses: actions/setup-node@v1
         with:
           node-version: 18
+
       - name: 安装pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
-      - uses: actions/checkout@v2
+
+      - uses: actions/checkout@v3
       - run: pnpm i
-      - run: pnpm updater
+      - run: pnpm -v
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
