--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,9 +36,22 @@ debug-assertions = false
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = ["shell-open"] }
+tauri = { version = "1.5", features = [ "updater", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+# 处理时间
+chrono = "0.4.31"
+
+tokio = { version = "1.33.0", features = ["full"] }
+# 处理错误
+anyhow = "1.0.75"
+# 处理错误 enum 参数
+thiserror = "1.0.50"
+# 处理日志及栈追踪
+tracing = "0.1.40"
+tracing-appender = "0.2.3"
+tracing-subscriber = "0.3.18"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
