--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "sass": "^1.70.0",
+    "terser": "^5.27.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
   }
