--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -100,6 +100,9 @@ jobs:
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
 
+      - name: 查看打包好的文件
+        run: pnpm install
+
   publish-release:
     permissions:
       contents: write
