--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "image-compress-tauri",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "scripts": {
     "start": "tauri dev",
-    "build-debug": "tauri build --debug",
-    "build-release": "tauri build",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
+    "build:debug": "tauri build --debug",
+    "build:release": "tauri build",
+    "output:icon": "tauri icon xx.png -o dist",
+    "vite:dev": "vite",
+    "vite:build": "tsc && vite build",
+    "vite:preview": "vite preview"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.5.3",
