--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build:debug": "tauri build --debug",
     "build:release": "tauri build",
     "output:icon": "tauri icon xx.png -o dist",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "vite:dev": "vite",
+    "vite:build": "tsc && vite build",
+    "vite:preview": "vite preview"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.5.3",
