--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,7 +36,7 @@ debug-assertions = false
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "notification-all", "global-shortcut-all", "clipboard-all", "fs-all", "updater", "shell-open"] }
+tauri = { version = "1.5", features = [ "system-tray", "notification-all", "global-shortcut-all", "clipboard-all", "fs-all", "updater", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
