feat: 添加发布脚本

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "output:icon": "tauri icon xx.png -o dist",
     "vite:dev": "vite",
     "vite:build": "tsc && vite build",
-    "vite:preview": "vite preview"
+    "vite:preview": "vite preview",
+    "rsw": "rsw",
+    "updater": "node scripts/updater.mjs",
+    "release": "node scripts/release.mjs"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.5.3",
