--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -143,7 +143,7 @@ jobs:
 
       - uses: actions/checkout@v4
       - run: pnpm i
-      - run: pnpm -v
+      - run: pnpm updater
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
