--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
+    "@actions/github": "^6.0.0",
     "@tauri-apps/cli": "^1.5.9",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "sass": "^1.70.0",
     "terser": "^5.27.0",
     "typescript": "^5.3.3",
