--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -20,12 +20,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  create-release:
+  # 创建并获取 release-id
+  get-release-id:
     permissions:
       contents: write
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+    # outputs关键字用于定义一个步骤的输出，允许该步骤将数据传递给工作流中的其他步骤
     outputs:
-      release_id: ${{ steps.create-release.outputs.result }}
+      # 获取 id 为 id 的脚本的返回值
+      release_id: ${{ steps.id.outputs.result }}
 
     steps:
       - name: 签出代码
@@ -39,8 +42,8 @@ jobs:
       - name: 获取版本号
         run: echo "PACKAGE_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
 
-      - name: 创建 Release
-        id: create-release
+      - name: 获取 Release Id
+        id: id
         uses: actions/github-script@v7
         with:
           script: |
@@ -48,15 +51,16 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: `v${process.env.PACKAGE_VERSION}`,
-              name: `Desktop App v${process.env.PACKAGE_VERSION}`,
-              body: 'Take a look at the assets to download and install this app.',
+              name: `桌面 App v${process.env.PACKAGE_VERSION}`,
+              body: '看一下下载和安装这个应用程序的资源.',
               draft: true,
               prerelease: false
             })
             return data.id
 
+  # 构建 Tauri
   build-tauri:
-    needs: create-release
+    needs: get-release-id
     permissions:
       contents: write
     strategy:
@@ -98,23 +102,24 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          releaseId: ${{ needs.create-release.outputs.release_id }}
+          releaseId: ${{ needs.get-release-id.outputs.release_id }}
 
       - name: 查看打包好的文件
-        run: pnpm install
+        run: ls -R ./
 
+  # 发布 Release
   publish-release:
     permissions:
       contents: write
     runs-on: ubuntu-20.04
-    needs: [create-release, build-tauri]
+    needs: [get-release-id, build-tauri]
 
     steps:
-      - name: publish release
+      - name: 发布 Release
         id: publish-release
         uses: actions/github-script@v7
         env:
-          release_id: ${{ needs.create-release.outputs.release_id }}
+          release_id: ${{ needs.get-release-id.outputs.release_id }}
         with:
           script: |
             github.rest.repos.updateRelease({
@@ -128,7 +133,7 @@ jobs:
   # 生成静态资源并将其推送到 github pages
   updater:
     runs-on: ubuntu-latest
-    needs: [create-release, build-tauri, publish-release]
+    needs: [get-release-id, build-tauri, publish-release]
 
     steps:
       - name: 设置 Node 环境
@@ -143,7 +148,7 @@ jobs:
 
       - uses: actions/checkout@v4
       - run: pnpm i
-      - run: pnpm updater
+      - run: pnpm run updater
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -152,4 +157,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./updater
+          # 允许您仅使用最新的提交来创建发布分支
           force_orphan: true
