--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -3,8 +3,8 @@ name: "publish"
 on:
   push:
     branches: [master]
-    # tags:
-    #   - 'v*'
+    tags:
+      - "v*"
     paths-ignore:
       - ".idea/**"
       - ".gitattributes"
