--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,7 +36,7 @@ debug-assertions = false
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "system-tray", "notification-all", "global-shortcut-all", "clipboard-all", "fs-all", "updater", "shell-open"] }
+tauri = { version = "1.5", features = [ "window-start-dragging", "system-tray", "notification-all", "global-shortcut-all", "clipboard-all", "fs-all", "updater", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
@@ -45,7 +45,7 @@ chrono = "0.4.31"
 
 tokio = { version = "1.33.0", features = ["full"] }
 # 处理错误
-anyhow = "1.0.75"
+# anyhow = "1.0.75"
 # 处理错误 enum 参数
 thiserror = "1.0.50"
 # 处理日志及栈追踪
