--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "postcss-preset-env": "^9.3.0",
     "sass": "^1.70.0",
     "terser": "^5.27.0",
     "typescript": "^5.3.3",
