--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,7 @@ tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
 tauri = { version = "1.5", features = [ "os-all", "window-start-dragging", "system-tray", "notification-all", "global-shortcut-all", "clipboard-all", "fs-all", "updater", "shell-open"] }
+globset = "0.4.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
