--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,12 +37,36 @@ tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
 tauri = { version = "1.5", features = [ "os-all", "window-start-dragging", "system-tray", "notification-all", "global-shortcut-all", "clipboard-all", "fs-all", "updater", "shell-open"] }
-globset = "0.4.14"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+
+# 无损压缩 png (optipng、oxipng)
+oxipng = "9.0.0"
+# 有损压缩 png 把 png24 压缩成 png8 的库 是 pngquant 的包装
+imagequant = { version = "4.2.2", default-features = true }
+# image = "0.24.8"
+lodepng = "3.10.0"
+
+mozjpeg = "= 0.10.6"
+mozjpeg-sys = "2.0.5"
+
+# gifsicle 是读取以及 有损及无损压缩 gif 的库
+gifsicle = "1.94.0"
+libc = "0.2.152"
+
+# webp 无损压缩及有损压缩
+webp = "0.2.6" # 底层使用的是 rust libwebp-sys
+
+# 处理 svg
+svgtypes = "0.13.0"
+
+# 推断文件类型
+infer = "0.15.0"
 
 # 处理时间
 chrono = "0.4.31"
+globset = "0.4.14"
+walkdir = "2.4.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 tokio = { version = "1.33.0", features = ["full"] }
 # 处理错误
