--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -76,7 +76,7 @@ thiserror = "1.0.50"
 # 处理日志及栈追踪
 tracing = "0.1.40"
 tracing-appender = "0.2.3"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
