--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "image-compress-tauri",
   "private": true,
-  "version": "0.0.8",
+  "version": "0.0.9",
   "type": "module",
   "scripts": {
     "start": "tauri dev",
@@ -9,7 +9,8 @@
     "build:release": "tauri build",
     "output:icon": "tauri icon fire.png -o src-tauri/icons",
     "vite:dev": "vite",
-    "vite:build": "tsc && vite build",
+    "vite:build": " vite build",
+    "vite:tsc:build": "tsc && vite build",
     "vite:preview": "vite preview",
     "release": "node scripts/release.mjs",
     "updater": "node scripts/updater.mjs"
