--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -51,7 +51,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: `v${process.env.PACKAGE_VERSION}`,
-              name: `桌面 App v${process.env.PACKAGE_VERSION}`,
+              name: `图片压缩桌面 App v${process.env.PACKAGE_VERSION}`,
               body: '图片压缩程序',
               draft: true,
               prerelease: false
