--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -69,7 +69,7 @@ serde_json = "1.0"
 
 tokio = { version = "1.33.0", features = ["full"] }
 # 处理错误
-# anyhow = "1.0.75"
+anyhow = "1.0.75"
 # 处理错误 enum 参数
 thiserror = "1.0.50"
 # 处理日志及栈追踪
