--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -57,12 +57,7 @@ webp = "0.2.6" # 底层使用的是 rust libwebp-sys
 # 处理 svg
 svgtypes = "0.13.0"
 
-cocoa = { version = "0.25.0" }
-winapi = "0.3.9"
-
-windows = "0.52.0"
 webview2-com = "0.28.0"
-
 
 # 推断文件类型
 infer = "0.15.0"
@@ -83,6 +78,13 @@ thiserror = "1.0.50"
 tracing = "0.1.40"
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+
+[target.'cfg(target_os = "windows")'.dependencies]
+winapi = "0.3.9"
+windows = "0.52.0"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+cocoa = { version = "0.25.0" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
