--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -70,6 +70,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 tokio = { version = "1.33.0", features = ["full"] }
+num_cpus = "1.16.0"
+
 # 处理错误
 anyhow = "1.0.75"
 # 处理错误 enum 参数
