--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -67,6 +67,7 @@ chrono = "0.4.31"
 
 globset = "0.4.14"
 walkdir = "2.4.0"
+uuid = "1.7.0"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
