--- a/package.json
+++ b/package.json
@@ -15,26 +15,27 @@
     "updater": "node scripts/updater.mjs"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.6.0",
+    "@tauri-apps/api": "2.9.1",
+    "@tauri-apps/plugin-opener": "2.5.2",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "ahooks": "^3.9.6",
     "axios": "^1.13.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.2",
     "simplebar-react": "^3.3.2"
   },
   "devDependencies": {
     "@actions/github": "^6.0.1",
-    "@tauri-apps/cli": "^1.6.3",
-    "@types/node": "^20.19.27",
+    "@tauri-apps/cli": "^2.9.6",
+    "@types/node": "^25.0.3",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react": "^4.7.0",
-    "code-inspector-plugin": "^0.6.5",
+    "@vitejs/plugin-react": "^5.1.2",
+    "code-inspector-plugin": "^1.3.4",
     "postcss-preset-env": "^9.6.0",
     "sass": "^1.97.1",
     "terser": "^5.44.1",
     "typescript": "^5.9.3",
-    "vite": "^5.4.21"
+    "vite": "^7.3.0"
   }
 }
