--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,46 +30,59 @@ panic = "abort"
 # 是否开启断言调试
 debug-assertions = false
 
+[lib]
+# The `_lib` suffix may seem redundant but it is necessary
+# to make the lib name unique and wouldn't conflict with the bin name.
+# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
+name = "image_compress_tauri"
+crate-type = ["staticlib", "cdylib", "rlib"]
+
+
 
 [build-dependencies]
-tauri-build = { version = "1.5", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "1.5.4", features = [ "tracing", "os-all", "window-start-dragging", "system-tray", "notification-all", "global-shortcut-all", "clipboard-all", "fs-all", "updater", "shell-open"] }
+tauri = { version = "2", features = ["tray-icon"] }
+tauri-plugin-opener = "2"
+tauri-plugin-os = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-clipboard-manager = "2"
+tauri-plugin-notification = "2"
+tauri-plugin-global-shortcut = "2"
+tauri-plugin-updater = "2"
 
-webview2-com = "0.28.0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 
 # 处理时间
-chrono = "0.4.31"
+chrono = "0.4"
 
 # 推断文件类型
-infer = "0.15.0"
+infer = "0.19"
 
-globset = "0.4.14"
-walkdir = "2.4.0"
-uuid = "1.7.0"
+globset = "0.4"
+walkdir = "2"
+uuid = "1"
 
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-
-tokio = { version = "1.33.0", features = ["full"] }
-num_cpus = "1.16.0"
+tokio = { version = "1", features = ["full"] }
+num_cpus = "1"
 
 # 处理错误
-anyhow = "1.0.75"
+anyhow = "1"
 # 处理错误 enum 参数
-thiserror = "1.0.50"
+thiserror = "2"
 # 处理日志及栈追踪
-tracing = "0.1.40"
-tracing-appender = "0.2.3"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing = "0.1"
+tracing-appender = "0.2"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-winapi = "0.3.9"
-windows = "0.52.0"
+winapi = "0.3"
+windows = "0.52"
 
 [target.'cfg(target_os = "macos")'.dependencies]
-cocoa = { version = "0.25.0" }
+cocoa = { version = "0.26" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
