--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -63,7 +63,7 @@ infer = "0.19"
 
 globset = "0.4"
 walkdir = "2"
-uuid = "1"
+uuid = { version = "1", features = ["v4"] }
 
 tokio = { version = "1", features = ["full"] }
 num_cpus = "1"
