🐛 fix: tauri 打包警告

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,13 +30,18 @@ panic = "abort"
 # 是否开启断言调试
 debug-assertions = false
 
+
+[[bin]]
+name = "image-compress-tauri"
+path = "src/main.rs"
+
+
 [lib]
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "image_compress_tauri"
+name = "image_compress_tauri_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
-
 
 
 [build-dependencies]
