--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.2",
   "type": "module",
+  "packageManager": "pnpm@10.26.2",
   "scripts": {
     "start": "tauri dev",
     "build:debug": "tauri build --debug",
@@ -16,9 +17,15 @@
   },
   "dependencies": {
     "@tauri-apps/api": "2.9.1",
+    "@tauri-apps/plugin-clipboard-manager": "^2.3.2",
+    "@tauri-apps/plugin-fs": "^2.4.4",
+    "@tauri-apps/plugin-notification": "^2.3.3",
     "@tauri-apps/plugin-opener": "2.5.2",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@tauri-apps/plugin-os": "^2.3.2",
+    "@tauri-apps/plugin-process": "^2.3.1",
+    "@tauri-apps/plugin-updater": "^2.9.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "ahooks": "^3.9.6",
     "axios": "^1.13.2",
     "react-router-dom": "^6.30.2",
@@ -28,8 +35,8 @@
     "@actions/github": "^6.0.1",
     "@tauri-apps/cli": "^2.9.6",
     "@types/node": "^25.0.3",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "code-inspector-plugin": "^1.3.4",
     "postcss-preset-env": "^9.6.0",
