--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@tauri-apps/plugin-os": "^2.3.2",
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-updater": "^2.9.0",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
     "ahooks": "^3.9.6",
     "axios": "^1.13.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-router-dom": "^6.30.2",
     "simplebar-react": "^3.3.2"
   },
