--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "updater": "node scripts/updater.mjs"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/api": "2.9.1",
     "@tauri-apps/plugin-clipboard-manager": "^2.3.2",
     "@tauri-apps/plugin-fs": "^2.4.4",
@@ -29,7 +30,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^6.30.2",
-    "simplebar-react": "^3.3.2"
+    "simplebar-react": "^3.3.2",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@actions/github": "^6.0.1",
@@ -40,7 +42,6 @@
     "@vitejs/plugin-react": "^5.1.2",
     "code-inspector-plugin": "^1.3.4",
     "postcss-preset-env": "^9.6.0",
-    "sass": "^1.97.1",
     "typescript": "^5.9.3",
     "vite": "^7.3.0"
   }
