--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "axios": "^1.13.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^6.30.2",
+    "react-router": "^7.11.0",
     "simplebar-react": "^3.3.2",
     "tailwindcss": "^4.1.18"
   },
@@ -41,7 +41,6 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "code-inspector-plugin": "^1.3.4",
-    "postcss-preset-env": "^9.6.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.0"
   }
