--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.2.3",
     "react-router": "^7.11.0",
     "simplebar-react": "^3.3.2",
+    "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
