--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router": "^7.11.0",
     "simplebar-react": "^3.3.2",
     "tailwind-variants": "^3.2.2",
+    "tailwind-merge": "^3.2.2",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
